js/ui/modalDialog.js
@@ -83,7 +83,7 @@ ModalDialog.prototype = {
     },
 
     setButtons: function(buttons) {
-        this._buttonLayout.remove_all();
+        this._buttonLayout.destroy_children();
         let i = 0;
         for (let index in buttons) {
             let buttonInfo = buttons[index];
